Icon work completed, alignment issues solved, dates converted

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -11,9 +11,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  flex-grow: 1;
 }
 
-span {
-  text-align:center;
-}
+// .status-icon {
+//   // text-align:center;
+// }
